# lrcsync

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
