[package]
name = "lrcsync"
version = "0.1.1"
edition = "2021"
description = "a simple tool to sync lrc files from lrclib.net"
license = "GPL-3.0"
homepage = "https://github.com/javaarchive/lrcsync"
repository = "https://github.com/javaarchive/lrcsync"
readme = "README.md"

[dependencies]
anyhow = "1.0.93"
audiotags = "0.5.0"
clap = { version = "4.5.20", features = ["derive"] }
ignore = "0.4.23"
mime_guess = "2.0.5"
reqwest = { version = "0.12.9", features = ["http2", "gzip", "deflate", "native-tls-vendored" ] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
